[workspace]
members   = ["programs/*"]
resolver  = "2"

[workspace.package]
rust-version = "1.82"

[profile.release]
overflow-checks = true
lto             = "fat"
codegen-units   = 1

[profile.release.build-override]
opt-level     = 3
incremental   = false
codegen-units = 1

[patch.crates-io]
constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq", rev = "v0.3.1" }
